--- a/index.html
+++ b/index.html
@@ -92,18 +92,7 @@
 								</article>
 								<article>
 									<header>
-
-										<h2><a href="https://drive.google.com/drive/folders/1btQKtago9djMwol6vzWe-tAVX2vpHvWs?usp=sharing">PowerBI Projects</a></h2>
-									</header>
-									<a href="https://drive.google.com/drive/folders/1btQKtago9djMwol6vzWe-tAVX2vpHvWs?usp=sharing" class="image fit"><img src="images/PowerBI.png" alt="" /></a>
-									<p>The visualization I created using PowerBI could be accessed here.</p>
-									<ul class="actions special">
-										<li><a href="https://drive.google.com/drive/folders/1btQKtago9djMwol6vzWe-tAVX2vpHvWs?usp=sharing" class="button">View Projects</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://github.com/yagublufuad/AmazonWebScraping">Amazon Web Scraping</a></h2>
+										<h2><a href="https://github.com/yagublufuad/Web-Scraping">Amazon Web Scraping</a></h2>
 									</header>
 									<a href="https://github.com/yagublufuad/AmazonWebScraping" class="image fit"><img src="images/amazon.png" alt="" /></a>
 									<p>In this project we create an automated way with Python to check the price of an item on Amazon.</p>
@@ -111,6 +100,16 @@
 										<li><a href="https://github.com/yagublufuad/AmazonWebScraping" class="button">View Code</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/yagublufuad/Web-Scraping">Scraping Crypto Website and Analyzing Fluctuations</a></h2>
+									</header>
+									<a href="https://github.com/yagublufuad/3DReconstructionOpenCV" class="image fit"><img src="images/Crypto_API_img.jpg" alt="" /></a>
+									<p>This project showcases an example of web scraping utilizing the Python API of a website dedicated to real-time tracking of cryptocurrency fluctuations and its visualization.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/yagublufuad/3DReconstructionOpenCV" class="button">View Project</a></li>
+									</ul>
+								</article>	
 							</section>
 
 
