--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/fuad.yagublu/vizzes">Tableau Projects</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/fuad.yagublu/vizzes" class="image fit"><img src="images/TableauLogo_RGB.png" alt="" /></a>
-									<p>The dashboards I created using Taleau could be accessed here</p>
+									<p>The dashboards I created using Tableau could be accessed here</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/fuad.yagublu/vizzes" class="button">View Projects</a></li>
 									</ul>
@@ -88,6 +88,17 @@
 									<p>The projects that I did in SQL server are exploration of Covid 19 Dataset and cleaning housing data.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/yagublufuad/SQL_Projects" class="button">View Projects</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+
+										<h2><a href="https://drive.google.com/drive/folders/1btQKtago9djMwol6vzWe-tAVX2vpHvWs?usp=sharing">PowerBI Projects</a></h2>
+									</header>
+									<a href="https://drive.google.com/drive/folders/1btQKtago9djMwol6vzWe-tAVX2vpHvWs?usp=sharing" class="image fit"><img src="images/PowerBI.png" alt="" /></a>
+									<p>The visualization I created using PowerBI could be accessed here.</p>
+									<ul class="actions special">
+										<li><a href="https://drive.google.com/drive/folders/1btQKtago9djMwol6vzWe-tAVX2vpHvWs?usp=sharing" class="button">View Projects</a></li>
 									</ul>
 								</article>
 								<article>
@@ -109,7 +120,7 @@
 									<ul class="actions special">
 										<li><a href="https://github.com/yagublufuad/3DReconstructionOpenCV" class="button">View Project</a></li>
 									</ul>
-								</article>	
+								</article>								
 							</section>
 
 
